--- a/web/src/pages/Homepage/index.module.css
+++ b/web/src/pages/Homepage/index.module.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -33,16 +36,17 @@
 .content h2{
     text-align: center;
     color: #fff;
+    font-family: 'Poppins', sans-serif;
 }
 
 button {
     padding: 18px;
     background-color: rgb(138, 43, 227);
     color: rgb(255, 255, 255);
-    border-radius: 12px;
     border: none;
     cursor: pointer;
-    font-size: 16px;
+    font-family: 'Lilita One', cursive;
+    font-size: 18px;
 }
 
 button:hover{
